crates/requirements-txt/src/snapshots/requirements_txt__test__line-endings-bare-url.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Bare(
                BareRequirement {
                    extras: [],
                    url: VerbatimUrl {
                        url: Url {
                            scheme: "file",
                            cannot_be_a_base: false,
                            username: "",
                            password: None,
                            host: None,
                            port: None,
                            path: "/Users/crmarsh/workspace/uv/crates/requirements-txt/test-data/requirements-txt/scripts/editable-installs/black_editable",
                            query: None,
                            fragment: None,
                        },
                        given: Some(
                            "./scripts/editable-installs/black_editable",
                        ),
                    },
                    marker: None,
                },
            ),
            hashes: [],
            editable: false,
        },
        RequirementEntry {
            requirement: Bare(
                BareRequirement {
                    extras: [
                        ExtraName(
                            "dev",
                        ),
                    ],
                    url: VerbatimUrl {
                        url: Url {
                            scheme: "file",
                            cannot_be_a_base: false,
                            username: "",
                            password: None,
                            host: None,
                            port: None,
                            path: "/Users/crmarsh/workspace/uv/crates/requirements-txt/test-data/requirements-txt/scripts/editable-installs/black_editable",
                            query: None,
                            fragment: None,
                        },
                        given: Some(
                            "./scripts/editable-installs/black_editable",
                        ),
                    },
                    marker: None,
                },
            ),
            hashes: [],
            editable: false,
        },
        RequirementEntry {
            requirement: Bare(
                BareRequirement {
                    extras: [],
                    url: VerbatimUrl {
                        url: Url {
                            scheme: "file",
                            cannot_be_a_base: false,
                            username: "",
                            password: None,
                            host: None,
                            port: None,
                            path: "/scripts/editable-installs/black_editable",
                            query: None,
                            fragment: None,
                        },
                        given: Some(
                            "file:///scripts/editable-installs/black_editable",
                        ),
                    },
                    marker: None,
                },
            ),
            hashes: [],
            editable: false,
        },
    ],
    constraints: [],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
}
