crates/requirements-txt/src/snapshots/requirements_txt__test__line-endings-basic.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "numpy",
                    ),
                    extras: [],
                    version_or_url: Some(
                        VersionSpecifier(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: Equal,
                                        version: "1.24.2",
                                    },
                                ],
                            ),
                        ),
                    ),
                    marker: None,
                    source: Some(
                        "<REQUIREMENTS_DIR>/basic.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/basic.txt",
            ),
        },
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "pandas",
                    ),
                    extras: [],
                    version_or_url: Some(
                        VersionSpecifier(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: Equal,
                                        version: "2.0.0",
                                    },
                                ],
                            ),
                        ),
                    ),
                    marker: None,
                    source: Some(
                        "<REQUIREMENTS_DIR>/basic.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/basic.txt",
            ),
        },
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "python-dateutil",
                    ),
                    extras: [],
                    version_or_url: Some(
                        VersionSpecifier(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: Equal,
                                        version: "2.8.2",
                                    },
                                ],
                            ),
                        ),
                    ),
                    marker: None,
                    source: Some(
                        "<REQUIREMENTS_DIR>/basic.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/basic.txt",
            ),
        },
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "pytz",
                    ),
                    extras: [],
                    version_or_url: Some(
                        VersionSpecifier(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: Equal,
                                        version: "2023.3",
                                    },
                                ],
                            ),
                        ),
                    ),
                    marker: None,
                    source: Some(
                        "<REQUIREMENTS_DIR>/basic.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/basic.txt",
            ),
        },
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "six",
                    ),
                    extras: [],
                    version_or_url: Some(
                        VersionSpecifier(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: Equal,
                                        version: "1.16.0",
                                    },
                                ],
                            ),
                        ),
                    ),
                    marker: None,
                    source: Some(
                        "<REQUIREMENTS_DIR>/basic.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/basic.txt",
            ),
        },
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "tzdata",
                    ),
                    extras: [],
                    version_or_url: Some(
                        VersionSpecifier(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: Equal,
                                        version: "2023.3",
                                    },
                                ],
                            ),
                        ),
                    ),
                    marker: None,
                    source: Some(
                        "<REQUIREMENTS_DIR>/basic.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/basic.txt",
            ),
        },
    ],
    constraints: [],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    no_binary: None,
    only_binary: None,
}
