crates/requirements-txt/src/snapshots/requirements_txt__test__line-endings-constraints-b.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Uv(
                Requirement {
                    name: PackageName(
                        "django",
                    ),
                    extras: [],
                    marker: None,
                    source: Registry {
                        version: VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "2.1.15",
                                },
                            ],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [],
        },
        RequirementEntry {
            requirement: Uv(
                Requirement {
                    name: PackageName(
                        "pytz",
                    ),
                    extras: [],
                    marker: None,
                    source: Registry {
                        version: VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "2023.3",
                                },
                            ],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [],
        },
    ],
    constraints: [],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    no_binary: None,
    only_binary: None,
}
