crates/requirements-txt/src/snapshots/requirements_txt__test__line-endings-empty.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [],
    constraints: [],
    editable: [],
}
