crates/requirements-txt/src/snapshots/requirements_txt__test__line-endings-for-poetry.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "inflection",
                    ),
                    extras: [],
                    marker: None,
                    source: Registry {
                        version: VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "0.5.1",
                                },
                            ],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [],
        },
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "upsidedown",
                    ),
                    extras: [],
                    marker: None,
                    source: Registry {
                        version: VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "0.4",
                                },
                            ],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [],
        },
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "numpy",
                    ),
                    extras: [],
                    marker: None,
                    source: Registry {
                        version: VersionSpecifiers(
                            [],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [],
        },
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "pandas",
                    ),
                    extras: [
                        ExtraName(
                            "tabulate",
                        ),
                    ],
                    marker: None,
                    source: Registry {
                        version: VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: GreaterThanEqual,
                                    version: "1",
                                },
                                VersionSpecifier {
                                    operator: LessThan,
                                    version: "2",
                                },
                            ],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [],
        },
    ],
    constraints: [],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    no_binary: None,
    only_binary: None,
}
