crates/requirements-txt/src/snapshots/requirements_txt__test__line-endings-include-a.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "tomli",
                    ),
                    extras: [],
                    version_or_url: None,
                    marker: None,
                    path: Some(
                        "<REQUIREMENTS_DIR>/include-b.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/include-b.txt",
            ),
        },
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "numpy",
                    ),
                    extras: [],
                    version_or_url: Some(
                        VersionSpecifier(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: Equal,
                                        version: "1.24.2",
                                    },
                                ],
                            ),
                        ),
                    ),
                    marker: None,
                    path: Some(
                        "<REQUIREMENTS_DIR>/include-a.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/include-a.txt",
            ),
        },
    ],
    constraints: [],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    no_binary: None,
    only_binary: None,
}
