crates/requirements-txt/src/snapshots/requirements_txt__test__line-endings-include-b.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Pep508(
                Requirement {
                    name: PackageName(
                        "tomli",
                    ),
                    extras: [],
                    version_or_url: None,
                    marker: None,
                    source: Some(
                        Requirement(
                            "<REQUIREMENTS_DIR>/include-b.txt",
                        ),
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/include-b.txt",
            ),
        },
    ],
    constraints: [],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    no_binary: None,
    only_binary: None,
}
