crates/requirements-txt/src/snapshots/requirements_txt__test__line-endings-small.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "tqdm",
                    ),
                    extras: [],
                    version_or_url: Some(
                        VersionSpecifier(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: Equal,
                                        version: "4.65.0",
                                    },
                                ],
                            ),
                        ),
                    ),
                    marker: None,
                    path: Some(
                        "<REQUIREMENTS_DIR>/small.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/small.txt",
            ),
        },
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "tomli-w",
                    ),
                    extras: [],
                    version_or_url: Some(
                        VersionSpecifier(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: Equal,
                                        version: "1.0.0",
                                    },
                                ],
                            ),
                        ),
                    ),
                    marker: None,
                    path: Some(
                        "<REQUIREMENTS_DIR>/small.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/small.txt",
            ),
        },
    ],
    constraints: [],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    no_binary: None,
    only_binary: None,
}
